--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -1,20 +1,35 @@
 body {
   text-align: center;
+  background-color: #2b2b55;
 }
 
-.gameWindow {
-  border: 1px solid black;
+#app-container {
+  position: relative;
   margin: auto;
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
+  height: 90vh;
+  width: 90vh;
+}
+
+#gameWindow {
+  width: 100%;
+  height: 100%;
 }
 
 .btn-caddy {
+  position: absolute;
+  right: 3vh;
+  top: 3vh;
   text-align: center;
 }
 
 .btn-caddy button {
-  font-size: 2em;
+  border-radius: 10px;
+  border: none;
+  width: 20vh;
+  margin: 1vh;
+  font-size: 3vh;
+  display: block;
+  background-color: blue;
+  color: white;
 }
 /*# sourceMappingURL=main.css.map */
