--- a/resources/styles/main.scss
+++ b/resources/styles/main.scss
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: rgb(43, 43, 85);
+  background-color: rgb(5, 5, 46);
 }
 
 #app-container {
@@ -15,7 +15,7 @@ body {
   height: 100%;
 }
 
-.btn-caddy {
+#btn-caddy {
   position: absolute;
   right: 3vh;
   top: 3vh;
